<?xml version = "1.0" encoding = "utf-8"?>
<resources>
    <string name="app_name">Home Trash Audit</string>
    <string name="Instructions">Please select a unit. \n For consistency, please \n continue to use this unit for \n all future audits.</string>
    <string name="remove">Remove</string>

    <string-array name="container_array">
        <item>Five Gallon Bucket</item>
        <item>Large Trash Bag</item>
        <item>Small Trash Bag</item>
        <item>Large Box</item>
        <item>Small Box</item>
    </string-array>
    <string-array name="material_array">
        <item>Plastic</item>
        <item>Paper</item>
        <item>Metal</item>
        <item>Glass</item>
        <item>Bio</item>
    </string-array>

    <string-array name="plastic_categories">
        <item>Recyclable</item>
        <item>Non-Recyclable</item>
        <item>Film</item>
    </string-array>

    <string-array name="paper_categories">
        <item>Recyclable</item>
        <item>Non-Recyclable</item>
        <item>Compostable</item>
    </string-array>

    <string-array name="metal_categories">
        <item>Recyclable</item>
        <item>Non-Recyclable</item>
    </string-array>

    <string-array name="glass_categories">
        <item>Recyclable</item>
        <item>Non-Recyclable</item>
    </string-array>

    <string-array name="bio_categories">
        <item>Compostable</item>
        <item>Non-Compostable</item>
    </string-array>
    <string name="amount">Amount:</string>
    <string name="category">Category:</string>
    <string name="material">Material:</string>
    <string name="welcome_to_home_trash_audit">Welcome to Home Trash Audit!</string>
    <string name="ok">OK</string>
    <string name="add_to_audit">Add to Audit</string>
    <string name="add_to_journal">Add to Journal</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_waste">Pick Waste</string>
    <string name="new_audit">New Audit</string>
    <string name="viewjournal">viewJournal</string>
    <string name="view_totals">View Totals</string>
    <string name="slogan">Rehabilitating our Planet, One Pledge at a Time.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Login Strings -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="logout">Logout</string>
</resources>
