<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.WasteSelectionActivity"
    android:background="@drawable/broken_bark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:id="@+id/materialTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/categoryTextView"
        android:layout_below="@+id/materialSpinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="88dp"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/textView3"
        android:layout_above="@+id/addButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:labelFor="@+id/amountField"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_audit"
        android:id="@+id/addButton"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/materialSpinner"
        android:entries="@array/material_array"
        android:layout_alignTop="@+id/materialTextView"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:background="@drawable/button"
        android:layout_toEndOf="@+id/categoryTextView"
        android:minHeight="40dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner"
        android:layout_alignTop="@+id/categoryTextView"
        android:spinnerMode="dropdown"
        android:background="@drawable/button"
        android:layout_alignStart="@+id/materialSpinner"
        android:minHeight="40dp"
        android:layout_alignEnd="@+id/materialSpinner"
        android:gravity="center"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amountField"
        android:layout_alignTop="@+id/textView3"
        android:background="@drawable/button"
        android:layout_alignStart="@+id/categorySpinner"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/categorySpinner"
        android:minHeight="60dp"
        android:gravity="center"/>
</RelativeLayout>
