<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/broken_bark"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home_trash_audit" tools:context=".activities.HomeTrashAuditActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/dateText"
        android:background="@drawable/button"
        android:layout_alignBottom="@+id/dateButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_journal"
        android:id="@+id/addToJournalButton"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/listView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:background="#ffffff"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pickWasteButton"
        android:layout_above="@+id/addToJournalButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:id="@+id/dateButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="showDatePicker"
        android:background="@drawable/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_waste"
        android:id="@+id/pickWasteButton"
        android:layout_below="@+id/dateText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:layout_marginBottom="20dp"
        android:layout_alignEnd="@+id/listView" />

</RelativeLayout>